<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastFragment" >

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="650dp"
        android:orientation="horizontal"
        android:layout_centerInParent="true" >

        <!-- Day -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingMultiplier="2.5" />
        </LinearLayout>

        <!-- Weather icons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cloudy"
                android:layout_marginBottom="10dp" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/showers"
                android:layout_marginBottom="10dp" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/showers"
                android:layout_marginBottom="10dp" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/s_thunderstorm"
                android:layout_marginBottom="10dp" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cloudy"
                android:layout_marginBottom="10dp" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cloudy"
                android:layout_marginBottom="10dp" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/thunderstorm"
                android:layout_marginBottom="10dp" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/s_thunderstorm"
                android:layout_marginBottom="10dp" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/showers"
                android:layout_marginBottom="10dp" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/s_thunderstorm"
                android:layout_marginBottom="10dp" />
        </LinearLayout>

        <!-- Describe -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/tue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/wed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/thu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/fri"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/sat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/sun" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/mon2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/tue2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/wed2" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>